<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/picture_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="400dp"
        tools:src="@tools:sample/backgrounds/scenic"
        android:adjustViewBounds="true"
        android:contentDescription="@string/post" />

    <EditText
        android:id="@+id/input_description"
        android:layout_height="wrap_content"
        android:hint="@string/description_placeholder"
        android:inputType="text"
        android:textSize="30sp"
        android:layout_width="fill_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="bottom">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/danger_button"
            android:src="@drawable/delete"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:tint="@color/white"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:contentDescription="@string/cancel">
        </ImageButton>

        <ImageButton
            android:id="@+id/take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/neutral_button"
            android:src="@drawable/take_picture"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:tint="@color/white"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:contentDescription="@string/take_picture">
        </ImageButton>

        <ImageButton
            android:id="@+id/publish_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/neutral_button"
            android:src="@drawable/save"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:tint="@color/white"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:contentDescription="@string/save">
        </ImageButton>
    </RelativeLayout>

</LinearLayout>